--- a/metal-toad.html
+++ b/metal-toad.html
@@ -29,7 +29,7 @@
               <p>In February 2016, the Design and UX team undertook an extensive competitive analysis and brand positioning exercise to determine where we are — and where we are going — in the vast expanses of today’s software landscape. We leveraged our core values, our work with Emotive, empirical data, market research, and individual Toad input.</p>
             </div>
             <div class="cssContainer">
-              <div class="projectImages">
+              <div class="projectImages mtImages">
                 <figure class="figurePad">
                   <img class="mtLogo"src="img/mt-logo.png" alt="Metal Toad Logo">
                 </figure>
@@ -40,7 +40,9 @@
                   </div>
 
                 </div>
+                <figure class ="figurePad">
       						<img class="mtColorPalette"src="img/mt-color-palette.png" alt="Metal Toad Color Palette">
+                </figure>
                 <div class="projectDetail" id="metalToadDetail">
                   <h3>Metal Toad's Color Palette</h3>
                   <p>A secondary color palette was been developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
