--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -26,7 +26,9 @@
             <div class="projectDetail" id="sonyDetail">
               <h2>SonyPictures.com</h2>
               <h3>UX and UX Design</h3>
-              <p>Diagrams created in-conjunction with engineering, cloud, and project manangement team members at Metal Toad to illustrate Metal Toad's unique value add and approach to services.</p>
+              <p>Sonypictures.com is the public face of Sony Pictures Entertainment. Representing titles from Sony Pictures Home Entertainment, Sony Pictures Television and Motion Pictures Domestic, in addition to Crackle and Sony Rewards, there are over 3000 titles that are managed and presented through Sonypictures.com.</p> 
+              <p>Sony Pictures needed to update both the front-end look and feel of their site, as well as the administrative experience, and thus decided to build out a brand new site with Drupal 8. Partnering with the Design + UX team for the front-end design and UI, Metal Toad created a Drupal 8 instance which allows administrators to manage content across multiple departments from within the CMS, while creating an engaging and dynamic showcase for Sony Pictures titles and properties.</p>
+              <p>See the before and after below.</p>
               <p>SonyPictures.com is currently in development</p>
             </div>
               <div id="cssContainer">
@@ -35,7 +37,7 @@
                   <img class ="full-width" src="img/sony-before-2.png" alt="Sony Before 2">
                   <div class="projectDetail" id="sonyDetail">
                     <h3>SonyPictures.com Before</h3>
-                    <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
+                    <p>As the Sony Pictures website aged admins used old CMS fields to bend to new content types, which created a gap in user interaction, leaving users lost and frustrated. New functionality was needed for users to find key content they were looking for. In addition, the site looked outdated and needed an immersive redesign to create a modern look and put Sony Pictures back into the arena to compete with their biggest competitors.</p>
                   </div>
                   <figure class="shadow">
                     <img src="img/sony-1.png" alt="Sony After">
@@ -51,7 +53,7 @@
                   </figure>
                   <div class="projectDetail" id="sonyDetail">
                     <h3>SonyPictures.com After</h3>
-                    <p>The Metal Toad brandmark remained the same. The logotype, on the other hand, had been replaced. The previous slab serif logotype was difficult to read when scaled down to smaller sizes and its industrial feel was better suited for a younger, scrappier Metal Toad.</p>
+                    <p>The Metal Toad UX + Design team collaborated shoulder-to-shoulder with engineering to create a design system that was consistent across the website, let users find content in expected places without any barriers, and worked. Our team created an engaging and dynamic showcase for Sony Pictures titles and properties, which is not only beautiful, but intuitive and efficient to manage.</p>
                 </div>
                   <div id="moreProjects">
                   <div class="moreProjects">
