--- a/unfi.html
+++ b/unfi.html
@@ -26,13 +26,20 @@
             <div class="projectDetail" id="unfiDetail">
               <h2>UNFI Blue Marble</h2>
               <h3>UX, UI Design</h3>
-              <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
+              <p>Blue Marble Brands is a small group of foodie professionals dedicated to bringing customers the best organic, non-GMO, and specialty foods from around the world made with the highest standards for quality and taste.</p>
+
+              <p>With over 900 Blue Marble Brands product SKUs stored in Excel it was clear that Blue Marble needed to digitize and upgrade their existing management system.</p> 
+
+              <p>The product information management (PIM) allows users to manage information used to acquire, market, and sell products with a central set of data.</p>
+
+              <p>The phase 1 launch did not include UX or UI. The UX team  completed the UX and UI design in phase 2, creating a holistic brand experience throughout the PIM and a style guide for those who maintain the platform to use.</p>
+              <p>See the before and after below</p>  
             </div>
             <div id="cssContainer">
               <div class="projectImages unfiImages">
                 <figure>
                   <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
-              </figure>
+               </figure>
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
