--- a/unfi.html
+++ b/unfi.html
@@ -36,10 +36,23 @@
               <p>See the before and after below</p>  
             </div>
             <div id="cssContainer">
-              <div class="projectImages unfiImages">
-                <figure>
-                  <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
+              <div class="projectImages">
+               <figure class ="figurePad">
+                  <img class="border" src="img/bmb-1.png" alt="UNFI Blue Marble PIM Before">
                </figure>
+               <figcaption>Phase 1: Before</figcaption>
+               <figure class ="figurePad">   
+                <img class="border" src="img/bmb-2.png" alt="UNFI Blue Marble PIM Before">
+               </figure>
+               <figcaption>Phase 1: Before</figcaption>
+                <figure class="figurePad">
+                  <img class="border" src="img/bmb-after-1.png" alt="UNFI Blue Marble PIM After">
+               </figure>
+               <figcaption>Phase 2: After</figcaption>
+               <figure class ="figurePad">   
+                <img src="img/bmb-after-2.png" alt="UNFI Blue Marble PIM After">
+               </figure>
+               <figcaption>Phase 2: After</figcaption>
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
