--- a/holiday-card.html
+++ b/holiday-card.html
@@ -31,13 +31,13 @@
             <div id="cssContainer">
               <div class="projectImages cardImages">
                 <figure>
-                  <img src="img/mt-holiday-card.png" alt="Metal Toad Holiday Card">
+                  <img class="card" src="img/mt-holiday-card.png" alt="Metal Toad Holiday Card">
                 </figure>
                 <figure> 
-    						  <img src="img/mt-holiday-card-1.png" alt="Metal Toad Holiday Card">
+    						  <img class="card" src="img/mt-holiday-card-1.png" alt="Metal Toad Holiday Card">
                 </figure>
                 <figure>
-    					   	<img src="img/mt-holiday-card-2.png" alt="Metal Toad Holiday Card">
+    					   	<img class="card" src="img/mt-holiday-card-2.png" alt="Metal Toad Holiday Card">
                  </figure>
               </div>
                 <div id="moreProjects">
