--- a/project-firefly.html
+++ b/project-firefly.html
@@ -35,7 +35,7 @@
                   <img src="img/ff_web.jpg" alt="Project Firefly Desktop Image">
                 </figure>
                 <figure>
-      						<img src="img/ff_iphone.jpg" alt="Project Firefly Mobile Images">
+      						<img class="fireflyImage"src="img/ff_iphone.jpg" alt="Project Firefly Mobile Images">
                 </figure>    
               </div>
                 <div id="moreProjects">
