--- a/unfi.html
+++ b/unfi.html
@@ -33,10 +33,10 @@
               <p>The product information management (PIM) allows users to manage information used to acquire, market, and sell products with a central set of data.</p>
 
               <p>The phase 1 launch did not include UX or UI. The UX team  completed the UX and UI design in phase 2, creating a holistic brand experience throughout the PIM and a style guide for those who maintain the platform to use.</p>
-              <p>See the before and after below</p>  
+              <p>See the before and after below.</p>  
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
+              <div class="projectImages unfiImages">
                <figure class ="figurePad">
                   <img class="border" src="img/bmb-1.png" alt="UNFI Blue Marble PIM Before">
                </figure>
