--- a/digital-diagrams.html
+++ b/digital-diagrams.html
@@ -32,10 +32,11 @@
         <div id="cssContainer">
           <div class="projectImages diagramImages">
             <img src="img/mt-digital-diagrams-mac.jpg" alt="Digital Diagram on macbook">
-						<img class="full-width" src="img/digital-diagrams-1.png" alt="Information Management Digital Diagram">
-          <figure>
-						<img src="img/digital-diagrams-2.png" alt="Cloud Architecture Digital Diagram">
+          <figure class="diagramIphone">
+            <img class="diagramIphone" src="img/digital-diagrams-2.png" alt="Cloud Architecture Digital Diagram">
           </figure>
+						<img class="full-width" src="img/digital-diagrams-1.png" alt="Information Management Digital Diagram">
+
           </div>
             <div id="moreProjects">
               <div class="moreProjects">
