--- a/oshr.html
+++ b/oshr.html
@@ -34,30 +34,24 @@
             </div>
             <div id="cssContainer">
               <div class="projectImages">
-              <figure>
-                <img src="img/oshr-1.png" alt="OSHR Logo Sketches"/>
-              <figcaption>Brainstorming and Sketches</figcaption>
             </figure>
               <figure class="figurePad">
-                <img src="img/oshr-2.png" alt="OSHR Logo"/>
+                <img class="oshrLogo" src="img/oshr-2.png" alt="OSHR Logo"/>
               </figure>
                  <div class="projectDetail" id="oshrDetail">
                     <h3>Open Source HR and Open Source HR unConference Sketches</h3>
                     <p>Since the budget was small and timeline was quick I worked with the client to rapidly ideate through the use of sketches. Once we both landed on a few we felt resonated with the desired look and feel I dove into design.</p>
                     <p>The client wanted the logo to convery two things — open source - and an inviting nature (the client wanted the event to be fun, as opposed to some of the stuffy HR events we've all sat through.) To achieve this goal we ultimately chose a fun, welcoming layout with two open source fonts. Roboto is study and captures the ideas that come to mind when one thinks of HR, while it's secondary font, Space Mono, adds to the feeling of warmth and playfullness.</p>
                   </div>
-  
-              
+            <div class="oshrSwag">    
               <figure class="figurePad postcard">
                 <img class="full-width oshrPostcard" src="img/postcard.jpg" alt="OSHR Postcard"/>
             </figure>
-            <!-- <figure class="figurePad poster"> -->
-              <!-- <img class ="poster" src="img/oshr-poster.jpg" alt="OSHR Poster"/> --> 
-<!--             </figure>
- -->        <figure class="figurePad t-shirt">
-                <img class="full-width"src="img/oshr-tshirt.jpg" alt="OSHR TShirt"/>  
+            <figure class="tShirt">
+              <img class="full-width" src="img/oshr-tshirt.jpg" alt="OSHR TShirt"/>  
               </figure>
-              <div class="projectDetail" id="oshrDetail">
+            </div>
+            <div class="projectDetail" id="oshrDetail">
                  <h3>Open Source Swag!</h3>
                  <p>To welcome attendees to the unConference each person recieved a swag bag in the form of a branded toat that contained everything they could need, including snacks and water, but also on brand keepsakes to place on your wall, such as a poster, or a trendy t-shirt to wear to future tech and HR events.</p>
                  <p>The posters and postcards were used to promote the event within the community and signage was created to navigate attendees throughout the building.</p>
