--- a/ux.html
+++ b/ux.html
@@ -24,9 +24,9 @@
           </header>
           <main role="main">
             <div class="projectDetail" id="uxDetail">
-              <h2>UNFI Blue Marble</h2>
-              <h3>UX, UI Design</h3>
-              <p>Overhaul of UNFI Blue Marble's product information management system. Includes UX and UI. Handoff was accompanied by a style guide created for those who maintain the platform to use.</p>
+              <h2>UX recommendations, audits, wireframing, protyping, and more.</h2>
+              <h3>UX Design</h3>
+              <p>I have completed UX work for the following clients.</p>
             </div>
             <div id="cssContainer">
               <div class="projectImages">
