--- a/ux.html
+++ b/ux.html
@@ -24,13 +24,15 @@
           </header>
           <main role="main">
             <div class="projectDetail" id="uxDetail">
-              <h2>UX recommendations, audits, wireframing, protyping, and more.</h2>
+              <h2>UX Work</h2>
               <h3>UX Design</h3>
-              <p>I have completed UX work for the following clients.</p>
+              <p>Experience in UX work, including: UX audits, recommendations, wireframing, prototyping, designing in browser, and developing design systems for the clients below.</p>
             </div>
             <div id="cssContainer">
-              <div class="projectImages">
-                <img src="img/iMac-unfi-bmb-pim.jpg" alt="UNFI Blue Marble PIM">
+              <div class="projectImages clientLogos">
+              <figure class="figurePad">  
+                <img class="full-width" src="img/client-logos-1.png" alt="Client Logos">
+              </figure>  
               </div>
                 <div id="moreProjects">
                   <div class="moreProjects">
