--- a/ux.html
+++ b/ux.html
@@ -31,7 +31,7 @@
             <div id="cssContainer">
               <div class="projectImages clientLogos">
               <figure class="figurePad">  
-                <img src="img/client-logos-1.png" alt="Client Logos">
+                <img class="clientImage"src="img/client-logos-1.png" alt="Client Logos">
               </figure>  
               </div>
                 <div id="moreProjects">
