--- a/about.html
+++ b/about.html
@@ -27,13 +27,13 @@
 
             
             <aside class="about" id="about">
-              <p>With over six years of experience in design, I am a seasoned designer with expertise in brand and UX work across a wide range of industries, including technology, entertainment, energy, and higher education.</p>
+              <p>I am a seasoned designer with expertise in brand and UX work across a wide range of industries, including technology, entertainment, energy, and higher education.</p>
 
-              <p>A lifelong learner and student of design, I have worked to combine my vast design knowledge with the engineering world in order to bridge the gap between clients, designers, and engineers through a common vocabulary and in-depth industry experience. I am a Human Interaction Design Foundation certified UX Designer, and a graduate of the Epicodus night school program, through which I gained a deeper understanding of engineering technologies and processes, while honing my front-end development skills. Through my experience with these programs in combination with my design-based skillset, I am able to precisely and efficiently craft solutions for clients that both solve their core issues while simultaneously meeting their high-level business objectives.</p>  
+              <p>With a skillset that spans print and digital design, UX, and frontend development I am able to bridge the gap between clients, designers, and engineers through a common vocabulary and in-depth understanding of each project.</p>
 
-              <p>Apart from design, my experience in a variety of industries has helped me to broaden my skills to encompass brand engagement, marketing and advertising, project management, UX and digital capabilities, people management, and leadership.</p>
+              <p>I am interested in focusing my craft where design and technology intersect.</p>
 
-              <p>My primary passion is to provide helpful solutions in every context, while bringing an authentic design leadership voice to any team, no matter the size or setting.</p>
+              <p>Other passions: people management, leadership, lettering, typography.</p>
             </aside>
           </main>
           <footer role="contactinfo">
