--- a/digital-diagrams.html
+++ b/digital-diagrams.html
@@ -26,7 +26,7 @@
         <div class="projectDetail" id="diagramsDetail">
           <h2>Digital Diagrams</h2>
           <h3>Design</h3>
-          <p>Diagrams created in-conjunction with engineering, cloud, and project manangement team members at Metal Toad to illustrate Metal Toad's unique value add and approach to services.</p>
+          <p>Diagrams created alongside  engineering, cloud, and product manangement team members at Metal Toad to illustrate Metal Toad's unique value add and approach to services. A unique diagram was created for each service Metal Toad offers.</p>
           <p>Visit <a href="https://www.metaltoad.com/services">metaltoad.com/services</a>.</p>
         </div>
         <div id="cssContainer">
@@ -54,7 +54,6 @@
                   <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                   <li><a href="project-firefly.html">Project Firefly</a></li>
                   <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                  <li><a href="lettering.html">Lettering and calligraphy</a></li>
                 </ul>
               </div>
             </div>
