--- a/metal-toad.html
+++ b/metal-toad.html
@@ -45,7 +45,7 @@
                 </figure>
                 <div class="projectDetail" id="metalToadDetail">
                   <h3>Metal Toad's Color Palette</h3>
-                  <p>A secondary color palette was been developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
+                  <p>A secondary color palette was developed to expand upon the primary color palette. The secondary colors follow the characteristics of the brand’s primary orange. Bright and playful, there is an element of curiosity to them that ties in with Metal Toad's core values.</p>
                 </div>
                 <figure class ="figurePad">
       						<img class="typefaces" src="img/mt-3.png" alt="Metal Toad's Typefaces">    
@@ -54,7 +54,7 @@
                   <h3>Typefaces</h3>
                   <p>Metal Toad's previous typeface, Helvetica is difficult to read on screen and kept Metal Toad from embracing a brand all their own. Helvetica was replaced with two new typefaces — Whitney and Interstate.</p>
                   <p>Whitney, Metal Toad's new primary typeface has a more organic structure than Helvetica, making it feel more warm and welcoming.</p>
-                  <p>Interstate and Whitney were intentionally chosen and paired together for Metal Toad to offer a complementary and subtle sophistication that increases readability and enhances the user experience.</p>
+                  <p>Interstate and Whitney were intentionally chosen and paired together for Metal Toad to offer a complimentary and subtle sophistication that increases readability and enhances the user experience.</p>
                 </div>
                   <figure>
                     <img src="img/mt-6.png" alt="Metal Toad Discovery Deliverables">
@@ -67,7 +67,7 @@
                 </div>
                 <div class="projectDetail" id="metalToadDetail">                    
                 <h3>Buyer Persona Offsite</h3>
-                <p>Following the Brand Refresh, the Design + UX team held an offsite to create Metal Toad's buyer personas based on reasearch and interviews conducted with Metal Toad's clients, buyers, and stakeholders.<p> 
+                <p>Following the Brand Refresh, the Design + UX team held an offsite to create Metal Toad's buyer personas based on research and interviews conducted with Metal Toad's clients, buyers, and stakeholders.<p> 
                 <p>The Design + UX, Engineering, and Marketing teams gained multi-faceted, first-hand insights of who our buyers are, motivations, goals, pain points, why/how they buy, and what core offering(s) they buy. This knowledge  helps Metal Toad prioritize who to design for, and determine what/how to design for them.</p>
                 </div>
                   <img src="img/mt-8.png" alt="Metal Toad Brand Onboarding">
@@ -75,8 +75,8 @@
                 <div class="projectDetail" id="metalToadDetail">  
                   <h3>Metal Toad Brand Onboarding</h3>
                   <p>Within a month of each Metal Toad new hire's start date they are "brand onboarded." Brand onboarding explains why Metal Toad's brand is important through discussion around what a brand is, what it is made of, and a quick examination of some of the world's leading brands and what makes them so successful.</p>
-                  <p>Through the brand onboarding process new hires recieve templates, tools, and a handly little guide to apply Metal Toad's brand to client deliverables and the language to successfully articulate Metal Toad's vision and mission within the technology and broader community.</p>
-                  <p>Metal Toad has found this process to be successful in empowering Metal Toad employees to be an agent of their brand.</p>
+                  <p>Through the brand onboarding process new hires receive templates, tools, and a handly little guide to apply Metal Toad's brand to client deliverables and the language to successfully articulate Metal Toad's vision and mission within the technology and broader community.</p>
+                  <p>Metal Toad has found this process to be successful in empowering Metal Toad employees to be an agent of their brand and to wear the brand proudly.</p>
                 </div> 
                </div>
              </div>
@@ -96,7 +96,6 @@
                      <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                      <li><a href="project-firefly.html">Project Firefly</a></li>
                      <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                     <li><a href="lettering.html">Lettering and calligraphy</a></li>
                    </ul>
                  </div>
                </div>
