--- a/oshr.html
+++ b/oshr.html
@@ -39,9 +39,9 @@
                 <img class="oshrLogo" src="img/oshr-2.png" alt="OSHR Logo"/>
               </figure>
                  <div class="projectDetail" id="oshrDetail">
-                    <h3>Open Source HR and Open Source HR unConference Sketches</h3>
-                    <p>Since the budget was small and timeline was quick I worked with the client to rapidly ideate through the use of sketches. Once we both landed on a few we felt resonated with the desired look and feel I dove into design.</p>
-                    <p>The client wanted the logo to convery two things — open source - and an inviting nature (the client wanted the event to be fun, as opposed to some of the stuffy HR events we've all sat through.) To achieve this goal we ultimately chose a fun, welcoming layout with two open source fonts. Roboto is study and captures the ideas that come to mind when one thinks of HR, while it's secondary font, Space Mono, adds to the feeling of warmth and playfullness.</p>
+                    <h3>Open Source HR and Open Source HR unConference Logos</h3>
+                    <p>With a small budget was short timeline I worked with the client to rapidly ideate through the use of sketches. Once we both landed on a few we felt resonated with the desired look and feel I dove into design.</p>
+                    <p>The client wanted the logo to convey two things — open source - and an inviting nature (the client wanted the event to be fun, as opposed to some of the stuffy HR events we've all sat through.) To achieve this goal we ultimately chose a fun, welcoming layout with two open source fonts. Roboto is sturdy and captures the ideas that come to mind when one thinks of HR, while it's secondary font, Space Mono, adds to the feeling of warmth and playfullness, yet it reminds us of the subject of the group: HR within the technology industry.</p>
                   </div>
             <div class="oshrSwag">    
               <figure class="figurePad postcard">
@@ -53,7 +53,7 @@
             </div>
             <div class="projectDetail" id="oshrDetail">
                  <h3>Open Source Swag!</h3>
-                 <p>To welcome attendees to the unConference each person recieved a swag bag in the form of a branded toat that contained everything they could need, including snacks and water, but also on brand keepsakes to place on your wall, such as a poster, or a trendy t-shirt to wear to future tech and HR events.</p>
+                 <p>To welcome attendees to the unConference each person recieved a swag bag in the form of a branded tote bag that contained everything they could need, including snacks and water, but also on brand keepsakes to place on your wall, such as a poster, or a trendy t-shirt to wear to future tech and HR events.</p>
                  <p>The posters and postcards were used to promote the event within the community and signage was created to navigate attendees throughout the building.</p>
                </div>  
              <figure class="figurePad rejectedLogo">
@@ -62,7 +62,7 @@
             <div class="projectDetail" id="oshrDetail">
                <h3>Rejected</h3>
                <p>Sometimes we have to let go...</p>
-               <p>The rejected logo used to the same typefaces as the chosen one, but had a more utilitarian feel with it's color palette and lockup. The lines mimic the lines of code.</p>
+               <p>The rejected logo used  the same typeface as the chosen one, but had a more utilitarian feel with it's color palette and lockup. The lines mimic the lines of code.</p>
              </div>
              <!-- <figure>
                 <img class="full-width" src="img/oshr-live.png" alt="Open Source HR Event"/>
@@ -97,7 +97,6 @@
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                      <li><a href="lettering.html">Lettering and calligraphy</a></li>
                     </ul>
                   </div>
                 </div>
