--- a/project-firefly.html
+++ b/project-firefly.html
@@ -26,7 +26,7 @@
             <div class="projectDetail" id="fireflyDetail">
               <h2>Project Firefly</h2>
               <h3>Art Direction, UX, Design</h3>
-              <p>UX and UI for Project Firefly, a platform connecting throught leaders with the world's most renouned companies. When I joined the team the desktop site had been built, but it was not responsive. Working backwards I collaborated with our developers to create  clear, sophisticated mobile experiences across a range of devices. The result was a satisfied client and an easy to use, intuitive mobile experience.</p>
+              <p>UX and UI for Project Firefly, a platform connecting thought leaders with the world's most renouned companies. When I joined the team the desktop site had been built, but it was not responsive. Working backwards I collaborated with our developers to create  clear, sophisticated mobile experiences across a range of devices. The result was a satisfied client and an easy to use, intuitive mobile experience.</p>
               <p>Visit <a href="https://project-firefly.com/">project-firefly.com</a>.</p>
             </div>
             <div id="cssContainer">
@@ -54,7 +54,6 @@
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                      <li><a href="lettering.html">Lettering and calligraphy</a></li>
                     </ul>
                   </div>
                 </div>
