--- a/unfi.html
+++ b/unfi.html
@@ -30,9 +30,9 @@
 
               <p>With over 900 Blue Marble Brands product SKUs stored in Excel it was clear that Blue Marble needed to digitize and upgrade their existing management system.</p> 
 
-              <p>The product information management (PIM) allows users to manage information used to acquire, market, and sell products with a central set of data.</p>
+              <p>The product information management (PIM) system allows users to manage information used to acquire, market, and sell products with a central set of data.</p>
 
-              <p>The phase 1 launch did not include UX or UI. The UX team  completed the UX and UI design in phase 2, creating a holistic brand experience throughout the PIM and a style guide for those who maintain the platform to use.</p>
+              <p>The phase 1 launch did not include UX or UI. The UX team  completed the UX and UI design in phase 2, creating an easy to use interface and a holistic brand experience throughout the PIM. Handoff included a style guide for those who maintain the platform to use.</p>
               <p>See the before and after below.</p>  
             </div>
             <div id="cssContainer">
@@ -70,7 +70,6 @@
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                      <li><a href="lettering.html">Lettering and calligraphy</a></li>
                     </ul>
                   </div>
                 </div>
