--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <li class="projectFour"><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                 <li class="projectFive"><a href="code-girl.html">Code Girl</a></li>
                 <li class="projectSix"><a href="unfi.html">UNFI Blue Marble Product Information Management (PIM) System</a></li>
-                <li class="projectSeven"><a href="ux.html">UX Audit and Recommendations</a></li>
+                <li class="projectSeven"><a href="ux.html">UX Work</a></li>
                 <li class="projectEight"><a href="digital-diagrams.html">Digital Diagrams</a></li>
                 <li class="projectNine"><a href="project-firefly.html">Project Firefly</a></li>
                 <li class="projectTen"><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
-                <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li>
+                <!-- <li class="projectEleven"><a href="lettering.html">Lettering and Calligraphy</a></li> -->
               </ul>
             </div><!--Close Work Div-->
           </main>
