--- a/code-girl.html
+++ b/code-girl.html
@@ -26,7 +26,10 @@
             <div class="projectDetail" id="codeGirlDetail">
               <h2>Code Girl</h2>
               <h3>Concept + Design</h3>
-              <p>Poster created for a screening of Code Girl at Living Room Theaters in Portland, Oregon. The screening was put on in conjunction with Metal Toad and community sponsors from the software industry in Portland. The Poster was used as promotion and as take-aways on the night of the event. All proceeds went to <a href="http://appcamp4girls.com/" target="_blank">App Camp for Girls.</a></p>
+              <p><a href="http://www.codegirlmovie.com/"> Code Girl</a> follows high-school and college aged girls from across the globe create apps that catapult change in their community. Each team aims for their app to be selected for the <a href="https://technovationchallenge.org/">Technovation Challenge</a> finals. The Technovation Challenge aims to change the world by empowering girls worldwide to develop apps.</p>
+              <p>For the Portland community screening I created a promotional poster to promote the event to use as takeaways the night of the event.</p>  
+              <p>The design mimics where diversity and technology intersect through using multiple spoken languages combined with programming languages and a neutral color palette. The hierarcical focus is on the women themselves.</p>
+              <p>All proceeds went to <a href="http://appcamp4girls.com/" target="_blank">App Camp for Girls.</a></p>
             </div>
             <div id="cssContainer">
               <div class="projectImages codeGirlImages">
@@ -35,7 +38,10 @@
                  </figure>   
                 <figure>
                   <img class="full-width" src="img/code-girl-3.jpg" alt="Code Girl">    
-                 </figure> 
+                 </figure>
+                 <figure>
+                  <img class="full-width" src="img/code-girl-6.png" alt="Code Girl">    
+                 </figure>  
               </div>
               <div id="moreProjects">
                 <div class="moreProjects">
@@ -49,7 +55,7 @@
                     <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                     <li><a href="code-girl.html">Code Girl</a></li>
                     <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
-                    <li><a href="ux.html">UX Audits and Recommendations</a></li>
+                    <li><a href="ux.html">UX Work</a></li>
                     <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                     <li><a href="project-firefly.html">Project Firefly</a></li>
                     <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
