--- a/project-firefly.html
+++ b/project-firefly.html
@@ -50,7 +50,7 @@
                       <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                       <li><a href="code-girl.html">Code Girl</a></li>
                       <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
-                      <li><a href="ux.html">UX Audits and Recommendations</a></li>
+                      <li><a href="ux.html">UX Work/a></li>
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
