--- a/sony-pictures.html
+++ b/sony-pictures.html
@@ -25,7 +25,7 @@
           <main role="main">
             <div class="projectDetail" id="sonyDetail">
               <h2>SonyPictures.com</h2>
-              <h3>UX and UX Design</h3>
+              <h3>UX and UI Design</h3>
               <p>Sonypictures.com is the public face of Sony Pictures Entertainment. Representing titles from Sony Pictures Home Entertainment, Sony Pictures Television and Motion Pictures Domestic, in addition to Crackle and Sony Rewards, there are over 3000 titles that are managed and presented through Sonypictures.com.</p> 
               <p>Sony Pictures needed to update both the front-end look and feel of their site, as well as the administrative experience, and thus decided to build out a brand new site with Drupal 8. Partnering with the Design + UX team for the front-end design and UI, Metal Toad created a Drupal 8 instance which allows administrators to manage content across multiple departments from within the CMS, while creating an engaging and dynamic showcase for Sony Pictures titles and properties.</p>
               <p>See the before and after below.</p>
@@ -67,7 +67,7 @@
                       <li><a href="metal-toad.html">Metal Toad Brand Refresh</a></li>
                       <li><a href="code-girl.html">Code Girl</a></li>
                       <li><a href="unfi.html">UNFI Blue Marble PIM</a></li>
-                      <li><a href="ux.html">UX Audits and Recommendations</a></li>
+                      <li><a href="ux.html">UX Work</a></li>
                       <li><a href="digital-diagrams.html">Digital Diagrams</a></li>
                       <li><a href="project-firefly.html">Project Firefly</a></li>
                       <li><a href="holiday-card.html">Metal Toad Holiday Card</a></li>
