might have messed up css

--- a/code-girl.html
+++ b/code-girl.html
@@ -36,11 +36,11 @@
                 <figure class ="figurePad">
                   <img src="img/code-girl-poster-2.png" alt="Code Girl">    
                  </figure>   
-                <figure>
-                  <img class="full-width" src="img/code-girl-3.jpg" alt="Code Girl">    
+                <figure class="figurePad">
+                  <img src="img/code-girl-3.jpg" alt="Code Girl">    
                  </figure>
                  <figure>
-                  <img class="full-width" src="img/code-girl-6.png" alt="Code Girl">    
+                  <img class="full-width codeGirl6" src="img/code-girl-6.png" alt="Code Girl">    
                  </figure>  
               </div>
               <div id="moreProjects">
