--- a/code-girl.html
+++ b/code-girl.html
@@ -34,6 +34,9 @@
             <div id="cssContainer">
               <div class="projectImages codeGirlImages">
                 <figure class ="figurePad">
+                  <img src="img/code-girl-sketch-0.png" alt="Code Girl">    
+                 </figure>   
+                <figure class ="figurePad">
                   <img src="img/code-girl-poster-2.png" alt="Code Girl">    
                  </figure>   
                 <figure>
