--- a/books.html
+++ b/books.html
@@ -55,6 +55,10 @@
                 <a href="https://www.amazon.com/Killing-Dying-Adrian-Tomine/dp/1770462090/ref=sr_1_1?ie=UTF8&qid=1493591945&sr=8-1&keywords=killing+and+dying" target="_blank"><img src="img/killing-and-dying.jpg" alt="Be Here Now"><p>Killing and Dying</p><small>Adrian Tomine</small></a>
               </li>
               <li>
+                <a href="https://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/0881792128/ref=sr_1_1?ie=UTF8&qid=1493591728&sr=8-1&keywords=the+elements+of+typographic+style" target="_blank"><img src="img/malcolm-x-autobiography.jpg" alt="The Autobiography of Malcolm X"><p>The Autobiography of Malcolm X</p></a>
+                <small>Malcolm X, Alex Haley</small>
+              </li>
+              <li>
                 <a href="https://www.amazon.com/Hawaii-James-Michener/dp/0375760377/ref=sr_1_1?ie=UTF8&qid=1493591962&sr=8-1&keywords=hawaii+james+michener" target="_blank"><img src="img/hawaii.jpg" alt="Be Here Now"><p>Hawaii</p><small>James A. Michener</small></a>
               </li>
               <li>
