--- a/code-girl.html
+++ b/code-girl.html
@@ -33,8 +33,8 @@
             </div>
             <div id="cssContainer">
               <div class="projectImages codeGirlImages">
-                <figure class ="figurePad">
-                  <img src="img/code-girl-sketch-0.png" alt="Code Girl">    
+                <figure class="codeSketch">
+                  <img class="codeSketch" src="img/code-girl-sketch-0.png" alt="Code Girl">    
                  </figure>   
                 <figure class ="figurePad">
                   <img src="img/code-girl-poster-2.png" alt="Code Girl">    
