--- a/books.html
+++ b/books.html
@@ -49,14 +49,21 @@
                 <a href="https://www.amazon.com/Inferno-Poets-Novel-Eileen-Myles/dp/1944869107/ref=sr_1_1?ie=UTF8&qid=1493591885&sr=8-1&keywords=inferno+a+poets+novel" target="_blank"><img src="img/inferno.jpg" alt="Inferno"><p>Inferno (A Poet's Novel)</p><small>Eileen Myles</small></a>
               </li>
               <li>
-                <a href="https://www.amazon.com/Driven-Distraction-Revised-Recognizing-Attention/dp/0307743152/ref=sr_1_1?ie=UTF8&qid=1493591931&sr=8-1&keywords=driven+to+distraction" target="_blank"><img src="img/driven-to-distraction.jpg" alt="Be Here Now"><p>Driven to Distaction</p><small>Edward M. Hallowell M.D. and John J Ratey M.D.</small></a>
+                <a href="https://www.amazon.com/Sweet-Land-Liberty-Forgotten-Struggle/dp/0812970381" target="_blank"><img src="img/sweet-land-of-liberty.jpg" alt="Sweet Land of Liberty"><p>Sweet Land of Liberty: The Forgotten Struggle for Civil Rights in the North</p><small>Thomas J. Sugrue</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Mans-Search-Meaning-Viktor-Frankl/dp/080701429X"><img src="img/mans-search.jpg" alt="Man's Search for Meaning"><p>Man's Search for Meaning</p><small>Viktor E. Frankl</small></a>
               </li>
               <li>
                 <a href="https://www.amazon.com/Killing-Dying-Adrian-Tomine/dp/1770462090/ref=sr_1_1?ie=UTF8&qid=1493591945&sr=8-1&keywords=killing+and+dying" target="_blank"><img src="img/killing-and-dying.jpg" alt="Be Here Now"><p>Killing and Dying</p><small>Adrian Tomine</small></a>
               </li>
               <li>
-                <a href="https://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/0881792128/ref=sr_1_1?ie=UTF8&qid=1493591728&sr=8-1&keywords=the+elements+of+typographic+style" target="_blank"><img src="img/malcolm-x-autobiography.jpg" alt="The Autobiography of Malcolm X"><p>The Autobiography of Malcolm X</p></a>
-                <small>Malcolm X, Alex Haley</small>
+                <a href="https://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/0881792128/ref=sr_1_1?ie=UTF8&qid=1493591728&sr=8-1&keywords=the+elements+of+typographic+style" target="_blank"><img src="img/malcolm-x-autobiography.jpg" alt="The Autobiography of Malcolm X"><p>The Autobiography of Malcolm X</p>
+                <small>Malcolm X, Alex Haley</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Own-Room-Discover-Signature-Leadership/dp/1422183939/ref=sr_1_1?s=books&ie=UTF8&qid=1525812694&sr=1-1&keywords=own+the+room" target="_blank"><img src="img/own-the-room.jpg" alt="Own The Room"><p>Own the Room</p>
+                <small>Amy Jen Su, Muriel Maignan Wilkins</small></a>
               </li>
               <li>
                 <a href="https://www.amazon.com/Hawaii-James-Michener/dp/0375760377/ref=sr_1_1?ie=UTF8&qid=1493591962&sr=8-1&keywords=hawaii+james+michener" target="_blank"><img src="img/hawaii.jpg" alt="Be Here Now"><p>Hawaii</p><small>James A. Michener</small></a>
@@ -78,6 +85,9 @@
               </li>
               <li>
                 <a href="https://www.amazon.com/Prophet-Borzoi-Book-Kahlil-Gibran/dp/0394404289/ref=sr_1_1?ie=UTF8&qid=1493592103&sr=8-1&keywords=the+prophet" target="_blank"><img src="img/the-prophet.jpg" alt="The Prophet"><p>The Prophet</p><small>Kahlil Gibran</small></a>
+              </li>
+              <li>
+                <a href="https://www.amazon.com/Driven-Distraction-Revised-Recognizing-Attention/dp/0307743152/ref=sr_1_1?ie=UTF8&qid=1493591931&sr=8-1&keywords=driven+to+distraction" target="_blank"><img src="img/driven-to-distraction.jpg" alt="Be Here Now"><p>Driven to Distraction</p><small>Edward M. Hallowell M.D. and John J Ratey M.D.</small></a>
               </li>
             </ul>
           </main>
